refactored so when refreshing the price, only the value reflects a visible style change, also refactored how many places after the decimal I am fixing a price to which is now contingent on where the first non-zero value resides

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -61,6 +61,11 @@
     transition: color 4s ease-in-out;
 }
 
+.price-symbol {
+    color: azure;
+    transition: color 4s ease-in-out;
+}
+
 .updated {
     color: #34F49E !important;
     transition: color .1s ease-in;
